# deserialize-fimfic-api

./: Cargo.toml  README.md
src/: lib.rs  rating.rs  status.rs  vote.rs
