[package]
name = "fimfiction-api"
version = "0.1.0"
authors = ["ZodiacalComet <ZodiacalComet@gmail.com>"]
description = "A serde implementation for the JSON responses of the Fimfiction story API "
license = "Unlicense"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
serde_json = { version = "1", features = ["preserve_order"] }
